Fix spacing in result box

--- a/docs/css.css
+++ b/docs/css.css
@@ -2,3 +2,7 @@
     font-size: 0.8rem;
     margin-bottom: 0;
 }
+
+.alert h4 {
+    margin: 0;
+}
